[project]
name = "02-inflation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "pandas-datareader>=0.10.0",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "wbdata>=1.1.0",
]
